--- a/data-engineer.html
+++ b/data-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682601628-data-engineer'>Massive Insights Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682601628-data-engineer'>Massive Insights Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -116,7 +116,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 online content network for information and online operations of CBS Corporation
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -244,7 +244,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -284,7 +284,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 <p><span class="badge badge-light">Mumbai Maharashtra, India</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -294,7 +294,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
+<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -303,7 +303,7 @@ talk to?...</p>
 <p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
 was born out of the challenges facing today's marketers. Incubated within?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999679257626-data-engineer-genomics-'>Kelly Services Data Engineer (Genomics) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999679257626-data-engineer-genomics-'>Kelly Services Data Engineer (Genomics) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -320,7 +320,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p>1 day ago ... At Hulu, data is essential for all our decision-making needs whether it's related to 
 product design, measuring advertising effectiveness, helping users discover?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/intapp/job/ofMW9fwQ'>Intapp Careers - Senior Data Engineer/Lead</a></h5> 
+<h5><a href='http://jobs.jobvite.com/intapp/job/ofMW9fwQ'>Intapp Careers - Senior Data Engineer/Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>22 hours ago ... Description. Senior Data Engineer/Lead: Our culture favors doers, innovators and 
 disruptors. We are growing, we get things done, and we are always looking for?...</p>
@@ -372,7 +372,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -384,7 +384,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
@@ -417,7 +417,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drizly/0729bdbf-5e2a-4ee2-a0c6-53a47c427f13'>Drizly - Analytics Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drizly/0729bdbf-5e2a-4ee2-a0c6-53a47c427f13'>Drizly - Analytics Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
